[tool.poetry]
name = "saatja"
version = "1.0.0"
description = "System to deliver webhooks cost-effectively"
authors = ["Janne Enberg <janne.enberg@lietu.net>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
loguru = "^0.5.3"
firedantic = "^0.1.3"
aiohttp = {extras = ["speedups"], version = "^3.7.3"}

[tool.poetry.scripts]
saatja = "saatja.main:main"
saatja-dev = "saatja.main:dev"
export-saatja-openapi = "saatja.main:openapi"

[tool.poetry.dev-dependencies]
mock = "^4.0.2"
pytest = "^6.1.2"
mock-firestore = "^0.7.2"
coverage = "^5.3"
codecov = "^2.1.10"
deepdiff = {extras = ["murmur"], version = "^5.0.2"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
